tests/wpt/tests/third_party/test262/test/language/statements/variable/eval-strict-single.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es5id: 12.2.1-1-s
esid: sec-variable-statement
description: >
    eval - a function declaring a var named 'eval' throws SyntaxError
    in strict mode
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var eval;
